// üß≠üêÉ analytics-protobufs: Protocol Buffers for Noelware Analytics
// Copyright (c) 2022 Noelware
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto3";

package noelware.analytics.grpc.v1.connection;
option java_package = "org.noelware.charted.protobufs.v1";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_generic_services = true;

service Analytics {
  rpc ConnectionAck(ConnectionAckEvent) returns (ConnectionAckResponse);
  rpc RetrieveStats(RetrieveStatsEvent) returns (RetrieveStatsResponse);
  rpc GetInstanceUUID(GetInstanceUUIDEvent) returns (GetInstanceUUIDResponse);
}

message ConnectionAckEvent {}

message ConnectionAckResponse {
  bool connected = 1;
  float ping = 2;
}

message RetrieveStatsEvent {}

message RetrieveStatsResponse {
  string product = 1;
  string version = 2;
  string commitSha = 3;
  string buildDate = 4;
  string buildFlavour = 5;
}

message GetInstanceUUIDEvent {}

message GetInstanceUUIDResponse {
  string uuid = 1;
}
